--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "jest": true
   },
   "rules": {
+    "func-names": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-no-bind": 0,
     "class-methods-use-this": 0,
