Higher order components

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "jest": true
   },
   "rules": {
+    "jsx-a11y/mouse-events-have-key-events": 0,
     "func-names": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-no-bind": 0,
